samples/_failures_safe/1761416764_7eccc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2da2e5e.c: In function ‘main’:
./samples/SAFE/__tmp_b2da2e5e.c:164:20: error: missing terminating " character
  164 |             printf("Comp
      |                    ^~~~~
./samples/SAFE/__tmp_b2da2e5e.c:164:13: error: expected expression at end of input
  164 |             printf("Comp
      |             ^~~~~~
./samples/SAFE/__tmp_b2da2e5e.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2da2e5e.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2da2e5e.c:164:13: error: expected declaration or statement at end of input
